consertei a parte de take, limit e afins
