# src/controllers/pokeController.js
@@ -2,6 +2,8 @@ const { response } = require('express');
 const express = require('express');
 const authMiddleware = require('../middleware/authenticate')
 
+require('dotenv/config')
+
 const Pokemon = require('../models/pokemon');
 
 const router = express.Router();
@@ -9,28 +11,14 @@ const router = express.Router();
 router.use(authMiddleware)
 
 router.get('', async (req, res) => {
-
-  const take = 20
-  const page = parseInt(req.query.page)
-  var query = {}
-  if (req.query.type1){
-    query.type1 = req.query.type1
-  }
-  if (req.query.name){
-    query.name = req.query.name
-  }
-  if (req.query.type2){
-    query.type2 = req.query.type2
-  }
-  if (!req.query.page){
-    req.query.page = 1
-  }
+  const {take, page} = req.query
+  if(!page){req.query.page = 1}
   try{
-    const pokemon = await Pokemon.find(query)
+    const pokemon = await Pokemon.find(req.query)
     .skip((take * page) - take)
     .limit(take)
     .exec()
-    return res.status(200).json({data: pokemon, next_page: `http://localhost:3001/pokemon?page=${parseInt(req.query.page)+1}`})
+    return res.status(200).json({data: pokemon, next_page: `${process.env.URL_PROD}pokemon?take=${take}&page=${parseInt(req.query.page) + 1}`})
   }catch(e){
     return res.status(400).json({error: e})
   }
@@ -38,12 +26,10 @@ router.get('', async (req, res) => {
 
 router.post('/register', async (req, res) => {
   try{
-    console.log("REQ", req.body)
     const pokemon = await Pokemon.create(req.body);
 
     return res.status(200).json(pokemon);
   }catch(e){
-    console.log(e)
     return res.status(400).json({error: "Registration failed"});
   }
 })
@@ -55,7 +41,6 @@ router.delete('/:id', async (req, res) => {
     })
     return res.status(200).json(deletePokemon)
   }catch(e){
-    console.log(e)
     return res.status(400).json({error: "Failed to delete pokemon"})
   }
 })
